--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ body {
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <img src="images/logo.png" alt="" width="100px">
+        <img src="logo.png" alt="" width="100px">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -307,7 +307,7 @@ body {
           <h1>Conectando você ao futuro da internet</h1>
           <p>Com planos de alta qualidade em fibra ótica e rádio, oferecemos uma internet rápida e estável para sua casa ou empresa.</p>
       </div>
-      <img src="images/home.png" alt="Internet" style="background-color: #121212;" width="600px" />
+      <img src="home.png" alt="Internet" style="background-color: #121212;" width="600px" />
   </section>
   
 
